syntax = "proto3";

package song;

service SongService {
  rpc GetAllSongs (GetAllSongsRequest) returns (SongList) {}
  rpc GetSongById (GetSongByIdRequest) returns (Song) {}
  rpc GetSongsByYear (GetSongsByYearRequest) returns (SongList) {}
  rpc CreateSong (CreateSongRequest) returns (Song) {}
  rpc UpdateSong (UpdateSongRequest) returns (Song) {}
  rpc DeleteSong (DeleteSongRequest) returns (DeleteSongResponse) {}
  rpc GetSongsByAlbum (GetSongsByAlbumRequest) returns (SongList) {}
  rpc GetSongsByArtist (GetSongsByArtistRequest) returns (SongList) {}
}

message GetAllSongsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetSongByIdRequest {
  string id = 1;
}

message GetSongsByYearRequest {
  int32 year = 1;
}

message CreateSongRequest {
  string title = 1;
  string artist = 2;
  string album = 3;
  int32 year = 4;
  repeated Play plays = 5;
}

message UpdateSongRequest {
  string id = 1;
  string title = 2;
  string artist = 3;
  string album = 4;
  int32 year = 5;
  repeated Play plays = 6;
}

message DeleteSongRequest {
  string id = 1;
}

message DeleteSongResponse {
  bool success = 1;
  string message = 2;
}

message GetSongsByAlbumRequest {
  string album = 1;
}

message GetSongsByArtistRequest {
  string artist = 1;
}

message Song {
  string id = 1;
  string title = 2;
  string artist = 3;
  string album = 4;
  int32 year = 5;
  repeated Play plays = 6;
}

message Play {
  string month = 1;
  int32 count = 2;
}

message SongList {
  repeated Song songs = 1;
  int32 total = 2;
}